feat: Return server domain on unauthenticated `GET /v1/server/config`
